--- a/views/home/home.html
+++ b/views/home/home.html
@@ -23,7 +23,7 @@
 <!-- Page Content -->
 <div class="container">
 
-    <h1>Hello</h1>
+    <h1 id="welcome"></h1>
     
     <form action="#" method="get" class="row g-3">
         <div class="col-auto"><label class="form-label">ICAO: </label></div>
@@ -31,7 +31,7 @@
             <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="LFBL">
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3" id="platforme" >search</button>
+            <button type="submit" class="btn btn-primary mb-3" id="rrr" ></button>
         </div>
     </form>
 <div class="container">
@@ -48,7 +48,7 @@
       </div>
 </div>
 
-<button id="test">Plateforme</button>
+<button id="platforme">Plateforme</button>
 
 <!-- Bootstrap core JavaScript -->
 <script src="index.js"></script>
