--- a/views/home/home.html
+++ b/views/home/home.html
@@ -13,6 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <link href="./home.css" rel="stylesheet" type="text/css">
     
 
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
@@ -25,6 +26,13 @@
 
     <h1 id="welcome"></h1>
     
+    <br>
+        <div class="alert alert-warning" role="alert" id="version">
+            
+        </div>
+    <br>
+
+
     <form action="#" method="get" class="row g-3">
         <div class="col-auto"><label class="form-label">ICAO: </label></div>
         <div class="col-auto">
