userpref and toolbar

--- a/views/home/home.html
+++ b/views/home/home.html
@@ -21,14 +21,17 @@
 
 <body>
 
-<!-- Page Content -->
+<!-- Page Content --> 
+<div id="navbar"></div>
+
 <div class="container">
 
+   
     <h1 id="welcome"></h1>
     
     <br>
         <div class="alert alert-warning" role="alert" id="version">
-            
+            <p id="new-download"></p>
         </div>
     <br>
 
@@ -60,6 +63,7 @@
 
 <!-- Bootstrap core JavaScript -->
 <script src="index.js"></script>
+
 </body>
 
 </html>
