--- a/views/home/navbar.html
+++ b/views/home/navbar.html
@@ -27,6 +27,6 @@
 </nav>
 
 <script>
-    $('#welcome').html(lang(preferencie.lang).sentences['welcome-message'])
-    require("bootstrap")
+  //  $('#welcome').html(lang(preferencie.lang).sentences['welcome-message'])
+   // require("bootstrap")
 </script>
