--- a/views/home/home.css
+++ b/views/home/home.css
@@ -1,3 +1,48 @@
+
+  .material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;  /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+  
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+  
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+  
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+  }
 #version{
+    display: none;
+}
+
+#result{
+    display: none;
+}
+
+#app{
+    display: none;
+}
+
+#twr{
+    display: none;
+}
+
+#gnd{
+    display: none;
+}
+
+#del{
     display: none;
 }
