--- a/views/home/home.html
+++ b/views/home/home.html
@@ -13,6 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <link href="./home.css" rel="stylesheet" type="text/css">
     
 
@@ -51,12 +53,60 @@
 
 
 <div class="container" id="result">
+    <div class="fs-3 fw-bold"><span id="nameAiport"></span> <span id="icao"></span></div>
+
+    <span class="" >Metar:</span>
     <div class="card">
-        <div class="card-body" id="icao">         
+        <div class="card-body" id="weather"></div>
+    </div>
+      <span class="" >Taf:</span>
+    <div class="card">
+        <div class="card-body" id="weather2"></div>
+    </div>
+
+    <br>
+    
+    <div class="text-wrap">
+        <button type="button" class="btn btn-dark btn-sm"><span class="material-icons">headset_mic</span>
+        <span class="badge bg-secondary" id="totalAtc"></span></button>
+        <button type="button" class="btn btn-dark btn-sm"><span class="material-icons">flight</span>
+        <span class="badge bg-secondary" id="totalfly"></span></button>
+    </div>
+    
+    <br>
+
+    <div id="app">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" id="AppCallsign"></h5>
+                <p class="card-text" id="AppAtis"></p>
+            </div>
         </div>
-        <div class="card-body" id="icao2">         
+    </div>
+    <div id="twr">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" id="twrCallsign"></h5>
+                <p class="card-text" id="twrAtis"></p>
+            </div>
         </div>
-      </div>
+    </div>
+    <div id="gnd">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" id="gndCallsign"></h5>
+                <p class="card-text" id="gndAtis"></p>
+            </div>
+        </div>
+    </div>
+    <div id="del">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title" id="delCallsign"></h5>
+                <p class="card-text" id="delAtis"></p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <button id="platforme">Plateforme</button>
