--- a/views/home/home.html
+++ b/views/home/home.html
@@ -71,6 +71,7 @@
         <span class="badge bg-secondary" id="totalAtc"></span></button>
         <button type="button" class="btn btn-dark btn-sm"><span class="material-icons">flight</span>
         <span class="badge bg-secondary" id="totalfly"></span></button>
+        <button type="button" class="btn btn-dark btn-sm" ><span id="chart"></span></button>
     </div>
     
     <br>
