--- a/views/home/home.html
+++ b/views/home/home.html
@@ -38,15 +38,16 @@
     <br>
 
 
-    <form action="#" method="get" class="row g-3">
+    <form>
         <div class="col-auto"><label class="form-label">ICAO: </label></div>
         <div class="col-auto">
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="LFBL">
+            <input type="text" name="icao" class="form-control" id="icao" placeholder="LFBL">
         </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3" id="rrr" ></button>
-        </div>
-    </form>
+    </form>   
+        <br>
+            <button id="platforme" class="btn btn-primary" >envoyer</button>
+
+    
 <div class="container">
     
 </div>
@@ -110,7 +111,7 @@
     </div>
 </div>
 
-<button id="platforme">Plateforme</button>
+<!-- <button id="platforme">Plateforme</button> -->
 
 <!-- Bootstrap core JavaScript -->
 <script src="index.js"></script>
