set formulaire ATC

--- a/views/home/home.html
+++ b/views/home/home.html
@@ -38,14 +38,15 @@
     <br>
 
 
-    <form>
+    <form action="#" method="dialog">
         <div class="col-auto"><label class="form-label">ICAO: </label></div>
         <div class="col-auto">
-            <input type="text" name="icao" class="form-control" id="icao" placeholder="LFBL">
+            <input type="text" name="icao" class="form-control" id="icao" placeholder="LFBL"> 
+            <input type="submit" id="platforme" class="btn btn-primary mt-2" ></button>
         </div>
     </form>   
         <br>
-            <button id="platforme" class="btn btn-primary" >envoyer</button>
+           
 
     
 <div class="container">
