--- a/views/home/home.css
+++ b/views/home/home.css
@@ -11,6 +11,7 @@
     word-wrap: normal;
     white-space: nowrap;
     direction: ltr;
+    
   
     /* Support for all WebKit browsers. */
     -webkit-font-smoothing: antialiased;
@@ -23,6 +24,10 @@
     /* Support for IE. */
     font-feature-settings: 'liga';
   }
+
+.material-icons :link{
+    text-decoration: none;
+}
 #version{
     display: none;
 }
@@ -46,3 +51,4 @@
 #del{
     display: none;
 }
+
