--- a/views/account/account.html
+++ b/views/account/account.html
@@ -15,16 +15,13 @@
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-    <link href="./home.css" rel="stylesheet" type="text/css">
-    
-
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
 </head>
 
 <body>
 
 <!-- Page Content --> 
-<div id="navbar"></div>
+
 
 <div class="container">
 
@@ -79,7 +76,7 @@
     <br>
 
     <div id="app">
-        <div class="card mb-2">
+        <div class="card">
             <div class="card-body">
                 <h5 class="card-title" id="AppCallsign"></h5>
                 <p class="card-text" id="AppAtis"></p>
@@ -87,7 +84,7 @@
         </div>
     </div>
     <div id="twr">
-        <div class="card mb-2">
+        <div class="card">
             <div class="card-body">
                 <h5 class="card-title" id="twrCallsign"></h5>
                 <p class="card-text" id="twrAtis"></p>
@@ -95,7 +92,7 @@
         </div>
     </div>
     <div id="gnd">
-        <div class="card mb-2">
+        <div class="card">
             <div class="card-body">
                 <h5 class="card-title" id="gndCallsign"></h5>
                 <p class="card-text" id="gndAtis"></p>
@@ -103,7 +100,7 @@
         </div>
     </div>
     <div id="del">
-        <div class="card mb-2">
+        <div class="card">
             <div class="card-body">
                 <h5 class="card-title" id="delCallsign"></h5>
                 <p class="card-text" id="delAtis"></p>
@@ -112,10 +109,10 @@
     </div>
 </div>
 
-<!-- <button id="platforme">Plateforme</button> -->
-
 <!-- Bootstrap core JavaScript -->
-<script src="index.js"></script>
+<script src="account.js"></script>
+
+
 
 </body>
 
