--- a/views/assets/navbar.html
+++ b/views/assets/navbar.html
@@ -9,7 +9,7 @@
               <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-              <span class="nav-link" id="welcome"></span>
+              <a class="nav-link" id="welcome" href='./../account/account.html'>Account</a>
             </li>
           
           <li class="nav-item dropdown">
@@ -27,6 +27,6 @@
 </nav>
 
 <script>
-  //  $('#welcome').html(lang(preferencie.lang).sentences['welcome-message'])
-   // require("bootstrap")
+   $('#welcome').html(lang(preferencie.lang).sentences['welcome-message'])
+   require("bootstrap")
 </script>
