--- a/views/home/home.css
+++ b/views/home/home.css
@@ -25,8 +25,9 @@
     font-feature-settings: 'liga';
   }
 
-.material-icons :link{
+.material-icons , a{
     text-decoration: none;
+    color: white;
 }
 #version{
     display: none;
