--- a/views/home/home.html
+++ b/views/home/home.html
@@ -15,7 +15,7 @@
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
     rel="stylesheet">
-    <link href="./home.css" rel="stylesheet" type="text/css">
+    <link href="./../style.css" rel="stylesheet" type="text/css">
     
 
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
