--- a/views/account/account.html
+++ b/views/account/account.html
@@ -1,65 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
-    <link href="./../style.css" rel="stylesheet" type="text/css">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
-</head>
-
-<body>
-
-<!-- Page Content --> 
-
-
-<div class="container">
-    <br>
-    <form action="#" method="dialog">
-        <div class="form-floating mb-3">
-          <input type="email" id="emailinput" class="form-control" id="floatingInput" aria-describedby="emailHelp">
-          <label for="floatingInput" id="email">Email address</label>
-        </div>
-
-        <div class="form-floating mb-3">
-          <input type="text" name="name" id="nameinput" class="form-control" id="floatingInput">
-          <label for="floatingInput" id="name">name</label>
-        </div>
-
-        <div class="form-floating mb-3">
-            <input type="text" name="vid" id="vidinput" class="form-control" id="floatingInput">
-            <label for="floatingInput" id="vid">vid</label>
-          </div>
-        
-          <div class="form-floating mb-3">
-            <select class="form-select" id="langageinput">
-                <option value="fr">French</option>
-                <option value="en">English</option>
-            </select>
-            <label for="floatingInput" id="langage">langage</label>
-          </div>
-          
-
-        <button type="submit" id="newaccountsubmit" class="btn btn-primary">Submit</button>
-      </form>
-   
-</div>
-
-<!-- Bootstrap core JavaScript -->
-<script src="account.js"></script>
-
-
-
-</body>
-
-</html>
+<h1>Hello</h1>
