--- a/views/account/account.html
+++ b/views/account/account.html
@@ -1,1 +1,42 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+    <link href="./../style.css" rel="stylesheet" type="text/css">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
+</head>
+
+<body>
+
+<!-- Page Content --> 
+
+
+<div class="container">
+
+    <p id="username"></p>
+    <p id="token"></p>
+    <p id="vid"></p>
+
+
+</div>
+
+
+<script src="account.js"></script>
+
+
+
+</body>
+
+</html>
