--- a/views/home/home.html
+++ b/views/home/home.html
@@ -29,7 +29,9 @@
 <div class="container">
 
    
-    <h1 id="welcome"></h1>
+    <div>
+        <h3><span id="welcome"></span> <span id="username"></span></h3>
+    </div>
     
     <br>
         <div class="alert alert-warning" role="alert" id="version">
