set new version

--- a/views/account/creataccount.html
+++ b/views/account/creataccount.html
@@ -28,17 +28,17 @@
     <form action="#" method="dialog">
         <div class="form-floating mb-3">
           <input type="email" id="emailinput" class="form-control" id="floatingInput" aria-describedby="emailHelp">
-          <label for="floatingInput" id="email">Email address</label>
+          <label for="floatingInput" id="email"></label>
         </div>
 
         <div class="form-floating mb-3">
           <input type="text" name="name" id="nameinput" class="form-control" id="floatingInput">
-          <label for="floatingInput" id="name">name</label>
+          <label for="floatingInput" id="name"></label>
         </div>
 
         <div class="form-floating mb-3">
             <input type="text" name="vid" id="vidinput" class="form-control" id="floatingInput">
-            <label for="floatingInput" id="vid">vid</label>
+            <label for="floatingInput" id="vid"></label>
           </div>
         
           <div class="form-floating mb-3">
@@ -46,11 +46,11 @@
                 <option value="fr">French</option>
                 <option value="en">English</option>
             </select>
-            <label for="floatingInput" id="langage">langage</label>
+            <label for="floatingInput" id="langage"></label>
           </div>
           
 
-        <button type="submit" id="newaccountsubmit" class="btn btn-primary">Submit</button>
+        <button type="submit" id="newaccountsubmit" class="btn btn-primary"></button>
       </form>
    
 </div>
