--- a/views/assets/navbar.html
+++ b/views/assets/navbar.html
@@ -3,25 +3,15 @@
         <a class="navbar-brand" href="#">IVA-Fly</a>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+              <a class="nav-link active" aria-current="page" id="home" href="./home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" id="features" href="#">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" id="welcome" href='#'>Account</a>
             </li>
-          
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Link
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul></ul>
+            </ul>
         </li>
       </div>
 </nav>
