--- a/views/account/account.html
+++ b/views/account/account.html
@@ -12,28 +12,28 @@
     <!-- Bootstrap core CSS -->
     <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="./../style.css" rel="stylesheet" type="text/css">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
 <body>
 
-<!-- Page Content --> 
+    <!-- Page Content -->
 
 
-<div class="container">
+    <div class="container">
 
-    <p id="username"></p>
-    <p id="token"></p>
-    <p id="vid"></p>
-
-
-</div>
+        <p id="username"></p>
+        <p id="token"></p>
+        <p id="email"></p>
+        <p id="vid"></p>
 
 
-<script src="account.js"></script>
+    </div>
+
+
+    <script src="account.js"></script>
 
 
 
