--- a/views/account/creataccount.html
+++ b/views/account/creataccount.html
@@ -3,60 +3,59 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
 
-    <!-- Bootstrap core CSS -->
-    <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
-    <link href="./../style.css" rel="stylesheet" type="text/css">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/>
+  <!-- Bootstrap core CSS -->
+  <link href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="./../style.css" rel="stylesheet" type="text/css">
+  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
 <body>
 
-<!-- Page Content --> 
+  <!-- Page Content -->
 
 
-<div class="container">
+  <div class="container">
     <br>
     <form action="#" method="dialog">
-        <div class="form-floating mb-3">
-          <input type="email" id="emailinput" class="form-control" id="floatingInput" aria-describedby="emailHelp">
-          <label for="floatingInput" id="email"></label>
-        </div>
+      <div class="form-floating mb-3">
+        <input type="email" id="emailinput" class="form-control" id="floatingInput" aria-describedby="emailHelp">
+        <label for="floatingInput" id="email"></label>
+      </div>
 
-        <div class="form-floating mb-3">
-          <input type="text" name="name" id="nameinput" class="form-control" id="floatingInput">
-          <label for="floatingInput" id="name"></label>
-        </div>
+      <div class="form-floating mb-3">
+        <input type="text" name="name" id="nameinput" class="form-control" id="floatingInput">
+        <label for="floatingInput" id="name"></label>
+      </div>
 
-        <div class="form-floating mb-3">
-            <input type="text" name="vid" id="vidinput" class="form-control" id="floatingInput">
-            <label for="floatingInput" id="vid"></label>
-          </div>
-        
-          <div class="form-floating mb-3">
-            <select class="form-select" id="langageinput">
-                <option value="fr">French</option>
-                <option value="en">English</option>
-            </select>
-            <label for="floatingInput" id="langage"></label>
-          </div>
-          
+      <div class="form-floating mb-3">
+        <input type="text" name="vid" id="vidinput" class="form-control" id="floatingInput">
+        <label for="floatingInput" id="vid"></label>
+      </div>
 
-        <button type="submit" id="newaccountsubmit" class="btn btn-primary"></button>
-      </form>
-   
-</div>
+      <div class="form-floating mb-3">
+        <select class="form-select" id="langageinput">
+          <option value="fr">French</option>
+          <option value="en">English</option>
+        </select>
+        <label for="floatingInput" id="langage"></label>
+      </div>
 
-<!-- Bootstrap core JavaScript -->
-<script src="creataccount.js"></script>
+
+      <button type="submit" id="newaccountsubmit" class="btn btn-primary"></button>
+    </form>
+
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="creataccount.js"></script>
 
 
 
