Sauvegarde de code

--- a/views/assets/navbar.html
+++ b/views/assets/navbar.html
@@ -22,5 +22,6 @@
   $("#welcome").on('click', () => {
     ipcRenderer.send("welcome")
   })
+  $('#online').show('<span class="material-icons-outlined"> online')
   require("bootstrap")
 </script>
