update menu and functionality

--- a/views/assets/navbar.html
+++ b/views/assets/navbar.html
@@ -9,6 +9,12 @@
         <a class="nav-link" id="features" href="#">Features</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" id="online" href="#"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="discord" href="#">Discord</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" id="welcome" href='#'>Account</a>
       </li>
     </ul>
@@ -22,6 +28,9 @@
   $("#welcome").on('click', () => {
     ipcRenderer.send("welcome")
   })
-  $('#online').show('<span class="material-icons-outlined"> online')
+  $('#discord').on('click', () => {
+    ipcRenderer.send('discord')
+  })
+  $('#online').hide()
   require("bootstrap")
 </script>
