--- a/views/assets/navbar.html
+++ b/views/assets/navbar.html
@@ -3,13 +3,13 @@
     <a class="navbar-brand" href="#">IVA-Fly</a>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" id="home" href="./home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="features" href="#">Features</a>
+        <a class="nav-link active" aria-current="page" id="home" href="../home/home.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="online" href="#"></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="features" href="#">Features</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" id="discord" href="#">Discord</a>
