--- a/views/friend/friend.html
+++ b/views/friend/friend.html
@@ -24,41 +24,28 @@
 
     <!-- Page Content -->
     <div id="navbar"></div>
-
+    <br>
     <div class="container">
-
-
-        <div>
-            <h3><span id="welcome"></span> <span id="username"></span></h3>
-        </div>
-
-
-        <br>
         <div class="alert alert-warning" role="alert" id="version">
             <p id="new-download"></p>
         </div>
         <br>
-
-        <div class="container px-4">
-            <div class="row gx-5">
-                <div class="col">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+        <form action="#" method="dialog">
+            <div class="col-auto">
+                <div class="form-floating mb-3">
+                    <input type="text" name="vid" class="form-control" id="vid">
+                    <label for="floatingInput" id="vid">Vid</label>
                 </div>
-                <div class="col">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+                <div class="form-floating mb-3">
+                    <input type="text" name="name" id="name" class="form-control">
+                    <label for="floatingInput" id="vid">Name</label>
                 </div>
+                <input type="submit" id="friend" class="btn btn-primary mt-2"></button>
             </div>
-        </div>
+        </form>
+        <p id="usersExist"></p>
+        <p id="usersAdd"></p>
+    </div>
 
 
-        <a href="../atc/atc.html"><button type="button" class="btn btn-primary">ATC</button></a>
-        <a href="../home/home.html"><button type="button" class="btn btn-primary">Pilot</button></a>
-        <a href="../friend/friend.html"><button type="button" class="btn btn-primary">Friend</button></a>
-
-
-        <!-- Bootstrap core JavaScript -->
-        <script src="index.js"></script>
-
-</body>
-
-</html>
+    <script src="friend.js"></script>
