--- a/views/home/home.html
+++ b/views/home/home.html
@@ -42,22 +42,18 @@
         <div class="container px-4">
             <div class="row gx-5">
                 <div class="col">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+
+                    <h5></h5>
+                    <a href="../atc/atc.html"><button type="button" class="btn btn-info btn-sm">ATC</button></a>
+                    <button type="button" disabled class="btn btn-success btn-sm" data-bs-toggle="tooltip"
+                        data-bs-placement="top" title="Tooltip on top">Pilot</button>
+                    <button type="button" class="btn btn-dark btn-sm" id="friendbutton">Friend</button>
                 </div>
-                <div class="col">
-                    <div class="p-3 border bg-light">Custom column padding</div>
-                </div>
+
             </div>
-        </div>
 
-
-        <a href="../atc/atc.html"><button type="button" class="btn btn-primary">ATC</button></a>
-        <a href="../home/home.html"><button type="button" class="btn btn-primary">Pilot</button></a>
-        <a href="../friend/friend.html"><button type="button" class="btn btn-primary">Friend</button></a>
-
-
-        <!-- Bootstrap core JavaScript -->
-        <script src="index.js"></script>
+            <!-- Bootstrap core JavaScript -->
+            <script src="index.js"></script>
 
 </body>
 
