--- a/views/atc/atc.html
+++ b/views/atc/atc.html
@@ -114,6 +114,26 @@
             </div>
         </div>
 
+        <div class="container px-4" id="fly">
+            <div class="row">
+                <div class="col">
+                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Arrival (<span id="totalarrival"></span>)</h5>
+                            <span id="arrival"></span>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+                            <div class="card-body">
+                                <h5 class="card-title">Departure (<span id="totaldeparture"></span>)</h5>
+                                <span id="departure"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         <!-- Bootstrap core JavaScript -->
         <script src="atc.js"></script>
