--- a/views/atc/atc.html
+++ b/views/atc/atc.html
@@ -40,7 +40,7 @@
         <br>
 
 
-        <form action="#" method="dialog">
+        <form action="#" method="dialog" id="atcform">
             <div class="col-auto"><label class="form-label">ICAO: </label></div>
             <div class="col-auto">
                 <input type="text" name="icao" class="form-control" id="icao" placeholder="LFBL">
@@ -115,16 +115,16 @@
         </div>
 
         <div class="container px-4" id="fly">
-            <div class="row">
+            <div class="row gx-5">
                 <div class="col">
-                    <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+                    <div class="p-3 border bg-light card text-white bg-dark mb-3" style="max-width: 18rem;">
                         <div class="card-body">
                             <h5 class="card-title">Arrival (<span id="totalarrival"></span>)</h5>
                             <span id="arrival"></span>
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+                        <div class="p-3 border bg-light card text-white bg-dark mb-3" style="max-width: 18rem;">
                             <div class="card-body">
                                 <h5 class="card-title">Departure (<span id="totaldeparture"></span>)</h5>
                                 <span id="departure"></span>
@@ -135,8 +135,8 @@
             </div>
 
 
-        <!-- Bootstrap core JavaScript -->
-        <script src="atc.js"></script>
+            <!-- Bootstrap core JavaScript -->
+            <script src="atc.js"></script>
 
 </body>
 
