--- a/views/atc/atc.html
+++ b/views/atc/atc.html
@@ -113,30 +113,32 @@
                 </div>
             </div>
         </div>
-
-        <div class="container px-4" id="fly">
-            <div class="row gx-5">
-                <div class="col">
-                    <div class="p-3 border bg-light card text-white bg-dark mb-3" style="max-width: 18rem;">
-                        <div class="card-body">
-                            <h5 class="card-title">Arrival (<span id="totalarrival"></span>)</h5>
-                            <span id="arrival"></span>
-                        </div>
+    </div>
+    
+    <div class="container" id="fly">
+        <div class="row">
+            <div class="col">
+                <div class="p-3 border bg-light card text-white bg-dark mb-3">
+                    <div class="card-body">
+                        <h5 class="card-title">Arrival (<span id="totalarrival"></span>)</h5>
+                        <span id="arrival"></span>
                     </div>
-                    <div class="col">
-                        <div class="p-3 border bg-light card text-white bg-dark mb-3" style="max-width: 18rem;">
-                            <div class="card-body">
-                                <h5 class="card-title">Departure (<span id="totaldeparture"></span>)</h5>
-                                <span id="departure"></span>
-                            </div>
+                </div>
+            </div>
+                <div class="col">
+                    <div class="p-3 border bg-light card text-white bg-dark mb-3" >
+                        <div class="card-body">
+                            <h5 class="card-title">Departure (<span id="totaldeparture"></span>)</h5>
+                            <span id="departure"></span>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
 
-            <!-- Bootstrap core JavaScript -->
-            <script src="atc.js"></script>
+        <!-- Bootstrap core JavaScript -->
+        <script src="atc.js"></script>
 
 </body>
 
